# swagger_server/controllers/default_controller.py
@@ -4,7 +4,7 @@ from swagger_server.models.error_model import ErrorModel
 from swagger_server.models.get_vp_response_object import GetVPResponseObject
 from swagger_server.models.response_obj import ResponseObj
 from swagger_server.models.s124_data_set import S124DataSet
-from swagger_server.models.text_message import TextMessage
+from swagger_server.models.text_message_object import TextMessageObject
 from swagger_server.models.voyage_plan import VoyagePlan
 from datetime import date, datetime
 from typing import List, Dict
@@ -12,9 +12,9 @@ from six import iteritems
 from ..util import deserialize_date, deserialize_datetime
 
 
-def acknowledment(deliveryAck):
+def acknowledgement(deliveryAck):
     """
-    acknowledment
+    acknowledgement
     Endpoint for receipt of acknowledgements
     :param deliveryAck: Acknowledgement 
     :type deliveryAck: dict | bytes
@@ -26,26 +26,26 @@ def acknowledment(deliveryAck):
     return 'do some magic!'
 
 
-def get_voyage_plan(uvid=None, routeStatus=None):
+def get_voyage_plans(uvid=None, routeStatus=None):
     """
-    get_voyage_plan
-    Returns active VoyagePlan
+    get_voyage_plans
+    Returns active VoyagePlans
     :param uvid: Unique identity (URN) of a voyageplan
     :type uvid: str
-    :param routeStatus: Status of a route for a voyageplan
+    :param routeStatus: Status of a route for a voyageplan: 1-Original   2-Planned_for_voyage    3-Optimized 4-Cross_Checked 5-Safety_Checked    6-Approved  7-Used_for_monitoring   8-Inactive
     :type routeStatus: str
 
-    :rtype: List[GetVPResponseObject]
+    :rtype: GetVPResponseObject
     """
     return 'do some magic!'
 
 
-def remove_voyage_plan_subscription(callBackendpoint, uvid=None):
+def remove_voyage_plan_subscription(callbackEndpoint, uvid=None):
     """
     remove_voyage_plan_subscription
     Remove subscription for active Voyage Plan from other services i.e. Enhanced Monitoring
-    :param callBackendpoint: An endpoint (URI) specifying the address where the subscribed data is to be posted
-    :type callBackendpoint: str
+    :param callbackEndpoint: An endpoint (URI) specifying the address where the subscribed data is to be posted
+    :type callbackEndpoint: str
     :param uvid: Unique identity (URN) of a voyageplan
     :type uvid: str
 
@@ -54,12 +54,12 @@ def remove_voyage_plan_subscription(callBackendpoint, uvid=None):
     return 'do some magic!'
 
 
-def subscribe_to_voyage_plan(callBackendpoint, uvid=None):
+def subscribe_to_voyage_plan(callbackEndpoint, uvid=None):
     """
     subscribe_to_voyage_plan
     Request subscription for active Voyage Plan from other services i.e. Enhanced Monitoring
-    :param callBackendpoint: An endpoint (URI) specifying the address where the subscribed data is to be posted
-    :type callBackendpoint: str
+    :param callbackEndpoint: An endpoint (URI) specifying the address where the subscribed data is to be posted
+    :type callbackEndpoint: str
     :param uvid: Unique identity (URN) of a voyageplan
     :type uvid: str
 
@@ -68,14 +68,14 @@ def subscribe_to_voyage_plan(callBackendpoint, uvid=None):
     return 'do some magic!'
 
 
-def upload_area(area, deliveryAckEndpoint=None):
+def upload_area(area, deliveryAckEndPoint=None):
     """
     upload_area
     Upload area message to VIS from other services i.e. Route Check service as an informational message
     :param area: Area message to add to VIS message db for delivery to STM Onboard system as additional information
     :type area: dict | bytes
-    :param deliveryAckEndpoint: Acknowledgement required, optionally an URL could be provided to send acknowledgment.
-    :type deliveryAckEndpoint: str
+    :param deliveryAckEndPoint: Acknowledgement required, optionally an URL could be provided to send acknowledgment.
+    :type deliveryAckEndPoint: str
 
     :rtype: ResponseObj
     """
@@ -84,23 +84,23 @@ def upload_area(area, deliveryAckEndpoint=None):
     return 'do some magic!'
 
 
-def upload_text_message(textMessage, deliveryAckEndpoint=None):
+def upload_text_message(textMessageObject, deliveryAckEndPoint=None):
     """
     upload_text_message
     Upload text message to VIS from other services i.e. Route Optimization service.
-    :param textMessage: Text message to add to VIS message db for delivery to STM Onboard system
-    :type textMessage: dict | bytes
-    :param deliveryAckEndpoint: Acknowledgement required, optionally an URL could be provided to send acknowledgment.
-    :type deliveryAckEndpoint: str
+    :param textMessageObject: Text message to add to VIS message db for delivery to STM Onboard system
+    :type textMessageObject: dict | bytes
+    :param deliveryAckEndPoint: Acknowledgement required, optionally an URL could be provided to send acknowledgment.
+    :type deliveryAckEndPoint: str
 
     :rtype: ResponseObj
     """
     if connexion.request.is_json:
-        textMessage = TextMessage.from_dict(connexion.request.get_json())
+        textMessageObject = TextMessageObject.from_dict(connexion.request.get_json())
     return 'do some magic!'
 
 
-def upload_voyage_plan(uvid, voyagePlan, deliveryAckEndpoint=None):
+def upload_voyage_plan(uvid, voyagePlan, deliveryAckEndPoint=None):
     """
     upload_voyage_plan
     Upload VoyagePlan to VIS from other services i.e. Route Optimization service.
@@ -108,8 +108,8 @@ def upload_voyage_plan(uvid, voyagePlan, deliveryAckEndpoint=None):
     :type uvid: str
     :param voyagePlan: Voyage Plan to add to VIS message db
     :type voyagePlan: dict | bytes
-    :param deliveryAckEndpoint: Acknowledgement required, optionally an URL could be provided to send acknowledgment.
-    :type deliveryAckEndpoint: str
+    :param deliveryAckEndPoint: Acknowledgement required, optionally an URL could be provided to send acknowledgment.
+    :type deliveryAckEndPoint: str
 
     :rtype: ResponseObj
     """
