# swagger_server/models/__init__.py
@@ -4,11 +4,8 @@ from __future__ import absolute_import
 # import models into model package
 from .delivery_ack import DeliveryAck
 from .error_model import ErrorModel
-from .gm_point import GMPoint
 from .get_vp_response_object import GetVPResponseObject
-from .latitude_type import LatitudeType
-from .longitude_type import LongitudeType
 from .response_obj import ResponseObj
 from .s124_data_set import S124DataSet
-from .text_message import TextMessage
+from .text_message_object import TextMessageObject
 from .voyage_plan import VoyagePlan
