# swagger_server/models/get_vp_response_object.py
@@ -13,31 +13,26 @@ class GetVPResponseObject(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, last_interaction_time: datetime=None, subject: str=None, voyage_plan: VoyagePlan=None):
+    def __init__(self, last_interaction_time: datetime=None, voyage_plan: List[VoyagePlan]=None):
         """
         GetVPResponseObject - a model defined in Swagger
 
         :param last_interaction_time: The last_interaction_time of this GetVPResponseObject.
         :type last_interaction_time: datetime
-        :param subject: The subject of this GetVPResponseObject.
-        :type subject: str
         :param voyage_plan: The voyage_plan of this GetVPResponseObject.
-        :type voyage_plan: VoyagePlan
+        :type voyage_plan: List[VoyagePlan]
         """
         self.swagger_types = {
             'last_interaction_time': datetime,
-            'subject': str,
-            'voyage_plan': VoyagePlan
+            'voyage_plan': List[VoyagePlan]
         }
 
         self.attribute_map = {
             'last_interaction_time': 'lastInteractionTime',
-            'subject': 'subject',
             'voyage_plan': 'voyagePlan'
         }
 
         self._last_interaction_time = last_interaction_time
-        self._subject = subject
         self._voyage_plan = voyage_plan
 
     @classmethod
@@ -76,45 +71,22 @@ class GetVPResponseObject(Model):
         self._last_interaction_time = last_interaction_time
 
     @property
-    def subject(self) -> str:
-        """
-        Gets the subject of this GetVPResponseObject.
-
-        :return: The subject of this GetVPResponseObject.
-        :rtype: str
-        """
-        return self._subject
-
-    @subject.setter
-    def subject(self, subject: str):
-        """
-        Sets the subject of this GetVPResponseObject.
-
-        :param subject: The subject of this GetVPResponseObject.
-        :type subject: str
-        """
-        if subject is None:
-            raise ValueError("Invalid value for `subject`, must not be `None`")
-
-        self._subject = subject
-
-    @property
-    def voyage_plan(self) -> VoyagePlan:
+    def voyage_plan(self) -> List[VoyagePlan]:
         """
         Gets the voyage_plan of this GetVPResponseObject.
 
         :return: The voyage_plan of this GetVPResponseObject.
-        :rtype: VoyagePlan
+        :rtype: List[VoyagePlan]
         """
         return self._voyage_plan
 
     @voyage_plan.setter
-    def voyage_plan(self, voyage_plan: VoyagePlan):
+    def voyage_plan(self, voyage_plan: List[VoyagePlan]):
         """
         Sets the voyage_plan of this GetVPResponseObject.
 
         :param voyage_plan: The voyage_plan of this GetVPResponseObject.
-        :type voyage_plan: VoyagePlan
+        :type voyage_plan: List[VoyagePlan]
         """
 
         self._voyage_plan = voyage_plan
